# intro-to-ai

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
.github/: renovate.json
